# claude-trading-skills

./: CLAUDE.md  README.md
backtesting-platform/: .gitignore  pyproject.toml
backtesting-platform/api/: config.py  database.py  main.py
backtesting-platform/api/models/: orm.py  schemas.py
backtesting-platform/api/routers/: backtests.py  stocks.py  strategies.py  universe.py
backtesting-platform/api/services/: backtest_service.py  data_service.py
backtesting-platform/data/: yfinance_client.py
backtesting-platform/engine/: backtest_engine.py  base_strategy.py  evaluator.py  execution_model.py  feature_engineer.py  result.py
backtesting-platform/frontend/: index.html  package-lock.json  package.json
backtesting-platform/frontend/src/: App.tsx  index.css
backtesting-platform/frontend/src/api/: backtests.ts  stocks.ts  strategies.ts
backtesting-platform/frontend/src/components/charts/: DrawdownChart.tsx  EquityChart.tsx  PriceSignalChart.tsx
backtesting-platform/frontend/src/pages/: ComparisonPage.tsx  StockDetailPage.tsx  UniversePage.tsx
backtesting-platform/frontend/src/types/: index.ts
backtesting-platform/strategies/: _registry.py  momentum_breakout.py  moving_average_crossover.py  rsi_mean_reversion.py
docs/en/: getting-started.md  skill-catalog.md
docs/en/skills/: index.md  (+4 more)
docs/ja/: getting-started.md  skill-catalog.md
scripts/: run_skill_generation_pipeline.py
scripts/tests/: test_skill_generation_pipeline.py
skill-packages/: breadth-chart-analyst.skill  sector-analyst.skill  vcp-screener.skill
skills/finviz-screener/: SKILL.md
(+10 files in other folders)
